--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ setenv =
     DJANGO_SETTINGS_MODULE=defcon.settings
 commands =
     coverage erase
-    coverage run --branch --omit={envdir}/*,test_app/*.py,*/migrations/*.py {envbindir}/django-admin.py test
+    coverage run --branch --omit={envdir}/*,*/migrations/*.py manage.py test
     coverage report
 deps =
      coverage
