Fix tests and lint

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ envlist = {py27,py3,pypy}-coverage,pylama
 
 [testenv]
 setenv =
-    DJANGO_SETTINGS_MODULE=defcon.settings
+    DJANGO_SETTINGS_MODULE=defcon.tests_settings
 commands =
     coverage erase
     coverage run --branch --omit={envdir}/*,*/migrations/*.py manage.py test
