--- a/pylama.ini
+++ b/pylama.ini
@@ -8,6 +8,12 @@ linters=pep8,pep257,pyflakes
 [pylama:pep8]
 max_line_length = 100
 
+[pylama:*/migrations/*.py]
+# D100: Missing docstring in public module
+# D101: Missing docstring in public class
+# E501: Line too long
+ignore = D100,D101,D104,E501
+
 [pylama:*/__init__.py]
 # D104: Missing docstring in public package
 ignore=D104
