--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
   - 2.7
-  - 3
+  - 3.4
+  - 3.5
 
 install:
   - pip install tox coveralls
@@ -9,16 +10,14 @@ install:
 script:
   - tox
 
+sudo: true
+
 after_success:
   - coveralls
 
-sudo: required
-
-dist: trusty
-
 env:
-  matrix:
-    - TOXENV=pylama
-    - TOXENV=pypy-coverage
-    - TOXENV=py27-coverage
-    - TOXENV=p3-coverage
+  - TOXENV=pylama
+  - TOXENV=pypy-coverage
+  - TOXENV=py27-coverage
+  - TOXENV=p34-coverage
+  - TOXENV=p35-coverage
