--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 [tox]
-envlist = {py27,py3,pypy}-coverage,pylama
+envlist = {py27,py34,py35,pypy}-coverage,pylama
 
 [testenv]
 setenv =
