--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ env:
   - TOXENV=pylama
   - TOXENV=pypy-coverage
   - TOXENV=py27-coverage
-  - TOXENV=p34-coverage
-  - TOXENV=p35-coverage
+  - TOXENV=py34-coverage
+  - TOXENV=py35-coverage
