setup: make sure we have all the files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
-include LICENSE
+include MANIFEST.in
+
+# These files are referenced from setup.py so we must make sure
+# of including them in the source distribution.
 include README.md
-recursive-include status/static *
-recursive-include status/templates *
+include requirements.txt tests-requirements.txt
