requirements.txt: fix issue with Django-1.11

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-django
+# django-jsonfield currently incompatible with django-1.10
+Django<1.11
 django-bootstrap3
 django-emoji
 django-rest-swagger
