--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,27 @@
 language: python
 
+dist: trusty
+
+matrix:
+  include:
+    - python: '2.7'
+      env: TOXENV=py27-coverage
+    - python: '3.4'
+      env: TOXENV=py34-coverage
+    - python: '3.5'
+      env: TOXENV=py35-coverage
+    - python: 'pypy'
+      env: TOXENV=pypy-coverage
+    - python: 'pypy'
+      env: TOXENV=pylama
+
 install:
   - pip install tox coveralls
 
 script:
   - tox
 
-sudo: true
+sudo: required
 
 after_success:
   - coveralls
-
-env:
-  - TOXENV=pylama
-  - TOXENV=pypy-coverage
-  - TOXENV=py27-coverage
-  - TOXENV=py34-coverage
-  - TOXENV=py35-coverage
