--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-# django-jsonfield currently incompatible with django-1.10
-Django<1.11
+django-allauth
+django-annoying
+django-bootstrap-form
 django-bootstrap3
 django-emoji
-django-rest-swagger
-django-picklefield
-djangorestframework
-django-annoying
-django-prometheus
+django-fontawesome
+django-gravatar2
 django-health-check
+django-picklefield
+django-prometheus
+django-rest-swagger
+djangorestframework
 jsonfield
 
 requests
 
 jinja2
 
+pbr
 jira
