travis/tox: fix tests, drop py2.7 support

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 [tox]
-envlist = {py27,py35,pypy}-coverage,pylama
+envlist = py36-coverage,pylama
 
 [testenv]
 setenv =
