--- a/pylama.ini
+++ b/pylama.ini
@@ -2,7 +2,7 @@
 # D105: Missing docstring in magic method
 # D203: 1 blank line required before class docstring
 # D213: Multi-line docstring summary should start at the second line
-ignore=D105,D203,D213
+ignore=D413,D407,D105,D203,D213
 linters=pep8,pep257,pyflakes
 
 [pylama:pep8]
