--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    if: contains(github.event.head_commit.message, 'Bump version')
+    if: contains(github.event.head_commit.message, '[Deploy]')
     runs-on: ubuntu-latest
 
     strategy:
