Add id-token write permission

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,10 @@ jobs:
     if: contains(github.event.head_commit.message, '[Deploy]')
     runs-on: ubuntu-latest
 
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
+
     strategy:
       matrix:
         python-version: [3.7]
